--- a/.hidden/CHANGELOG
+++ b/.hidden/CHANGELOG
@@ -1,3 +1,6 @@
+* Sun Jan 01 2017 Julio Sanchez Berro <jusabejusabe@gmail.com> 0.0.74
+- pequeños cambios de configuracion de preguntar para borrar todo, guardar en formato jpg por defecto las capturas
+
 * Sun Oct 23 2016 Julio Sanchez Berro <jusabejusabe@gmail.com> 0.0.73
 - fondo dinamico para 2º pantalla
 
