--- a/.hidden/CHANGELOG
+++ b/.hidden/CHANGELOG
@@ -1,3 +1,6 @@
+* Thu Dec 28 2017 Julio Sanchez Berro <jusabejusabe@gmail.com> 0.0.75
+- text Rich Text y poner imagen de fondo con varios modo de escala
+
 * Sun Jan 01 2017 Julio Sanchez Berro <jusabejusabe@gmail.com> 0.0.74
 - pequeños cambios de configuracion de preguntar para borrar todo, guardar en formato jpg por defecto las capturas
 
