corregido bug al guardar y abrir archivos de capturas

--- a/.hidden/CHANGELOG
+++ b/.hidden/CHANGELOG
@@ -1,3 +1,8 @@
+* Sat Mar 31 2018 Julio Sanchez Berro <jusabejusabe@gmail.com> 0.0.77
+
+* Sat Mar 31 2018 Julio Sanchez Berro <jusabejusabe@gmail.com> 0.0.77
+- Corregidos algunos errores al guardar y abrir archivos de capturas
+
 * Sat Mar 31 2018 Julio Sanchez Berro <jusabejusabe@gmail.com> 0.0.76
 -cambio directorio de trabajo. En vez de el temporal trabajo en uno que sea del usuario dentro de directorio oculto config
 
