--- a/.hidden/CHANGELOG
+++ b/.hidden/CHANGELOG
@@ -1,3 +1,6 @@
+* Sat Sep 17 2022 Julio Sanchez Berro <jusabejusabe@gmail.com> 0.0.78
+- mejora en la herramiento de texto al redibujarse mejor y asignar tamaño al crearlo
+
 * Sat Mar 31 2018 Julio Sanchez Berro <jusabejusabe@gmail.com> 0.0.77
 
 * Sat Mar 31 2018 Julio Sanchez Berro <jusabejusabe@gmail.com> 0.0.77
