mejora visual en numerador anillo de color negro alrededor y colorear el numero

--- a/.hidden/CHANGELOG
+++ b/.hidden/CHANGELOG
@@ -1,3 +1,6 @@
+* Tue Sep 20 2022 Julio Sanchez Berro <jusabejusabe@gmail.com> 0.0.79
+- mejora visual en numerador anillo de color negro alrededor y colorear el numero
+
 * Sat Sep 17 2022 Julio Sanchez Berro <jusabejusabe@gmail.com> 0.0.78
 - mejora en la herramiento de texto al redibujarse mejor y asignar tamaño al crearlo
 
