mejora visual en numerador anillo de color negro alrededor y colorear el numero

--- a/.hidden/CHANGELOG
+++ b/.hidden/CHANGELOG
@@ -1,4 +1,7 @@
 * Tue Sep 20 2022 Julio Sanchez Berro <jusabejusabe@gmail.com> 0.0.79
+- c
+
+* Tue Sep 20 2022 Julio Sanchez Berro <jusabejusabe@gmail.com> 0.0.79
 - mejora visual en numerador anillo de color negro alrededor y colorear el numero
 
 * Sat Sep 17 2022 Julio Sanchez Berro <jusabejusabe@gmail.com> 0.0.78
